put audio process in a separate function/module. tweaked bootstrap layout.

--- a/subtractor/audio_process/templates/audio_process/list.html
+++ b/subtractor/audio_process/templates/audio_process/list.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Minimal Django File Upload Example</title>	
 	</head>
-	<p>This is a test</p>
+	<h1>Uploaded files/h1>
 	<body>
 		<!-- List of uploaded documents -->
 		{% if documents %}
