--- a/subtractor/audio_process/templates/audio_process/base.html
+++ b/subtractor/audio_process/templates/audio_process/base.html
@@ -53,11 +53,11 @@
     </nav>
 
 
-    </div><!-- /.container -->
+    <!-- </div>/.container -->
 
-    <div class="container">
+    <!-- <div class="container"> -->
     {% block content %}{% endblock %}
-    </div>
+    <!-- </div> -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
